--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>보행환경 교통사고 위험 인식 조사</title>
+  <title>가로경관 인식 평가</title>
   
   <!-- Favicon 추가 (404 오류 해결) -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚶</text></svg>">
@@ -13,20 +13,19 @@
 <body>
   <!-- 표지 페이지 -->
   <section id="intro-page" class="page active">
-    <h1 class="title">보행환경 교통사고 위험 인식 조사</h1>
+    <h1 class="title">가로경관 인식 평가</h1>
 
     <p class="intro-text">
       안녕하세요. 본 설문은 <b>한양대학교 도시공학과 도시설계 및 공간분석 연구실</b>에서 
-      서울시 보행환경에 대한 <b>교통사고 위험 인식</b>을 평가하기 위해 진행됩니다.
+      서울시 보행환경에 대한 <b>시민 보행환경 인식</b>을 평가하기 위해 진행되는 연구용 설문조사입니다.
     </p>
 
     <div class="guide-box">
       <h3>평가 방법</h3>
       <ul>
-        <li>● 제시되는 사진을 보고 "이 장소에서 보행할 때 느끼는 <b>교통사고 위험 수준</b>"을 0~10점으로 평가합니다.</li>
-        <li>● <b>0점 = 매우 위험하다</b>, <b>10점 = 매우 안전하다</b></li>
-        <li>● 고려 대상: 보행자 시설, 보행 공간, 차량 통행량, 교통 표지·노면 표시 등 <b>교통사고 관련 요인</b></li>
-        <li>○ <span class="exclude">※ 범죄·치안 요인은 평가에서 제외합니다.</span></li>
+        <li>● 제시되는 사진을 보고 "이 장소에서 보행할 때 느끼는 <b>인식에 대한 수준</b>"을 1~5점으로 평가합니다.</li>
+        <li>● <b>1점 = 매우 아니다</b>, <b>10점 = 매우 그렇다</b></li>
+        <li>● 고려 대상: 보행자 시설, 보행 공간, 차량 통행량, 교통 표지·노면 표시 등 <b>보행 관련 요인</b></li>
       </ul>
     </div>
 
