--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul>
         <li>● 제시되는 사진을 보고 "이 장소에서 보행할 때 느끼는 <b>인식에 대한 수준</b>"을 1~5점으로 평가합니다.</li>
         <li>● <b>1점 = 매우 아니다</b>, <b>10점 = 매우 그렇다</b></li>
-        <li>● 고려 대상: 보행자 시설, 보행 공간, 차량 통행량, 교통 표지·노면 표시 등 <b>보행 관련 요인</b></li>
+        <li>● 고려 대상: 보행 시설, 보행 공간, 차량 통행량, 교통 표지·노면 표시 등 <b>보행 관련 요인</b></li>
       </ul>
     </div>
 
@@ -57,7 +57,7 @@
   <!-- 설문 페이지 -->
   <section id="survey-page" class="page">
     <h2>이미지를 보고 교통사고 위험 수준을 평가해주세요</h2>
-    <p class="subtext">0 = 매우 위험하다 / 10 = 매우 안전하다</p>
+    <p class="subtext">1 = 매우 아니다 / 5 = 매우 그렇다</p>
     <p class="subtext">※ 보행자 시설, 보행 공간, 차량 통행, 교통 표지 등만 고려</p>
     
     <div id="progress"></div>
@@ -66,17 +66,11 @@
     
     <form id="score-form">
       <div class="scale">
-        <label><input type="radio" name="score" value="0">0</label>
         <label><input type="radio" name="score" value="1">1</label>
         <label><input type="radio" name="score" value="2">2</label>
         <label><input type="radio" name="score" value="3">3</label>
         <label><input type="radio" name="score" value="4">4</label>
         <label><input type="radio" name="score" value="5">5</label>
-        <label><input type="radio" name="score" value="6">6</label>
-        <label><input type="radio" name="score" value="7">7</label>
-        <label><input type="radio" name="score" value="8">8</label>
-        <label><input type="radio" name="score" value="9">9</label>
-        <label><input type="radio" name="score" value="10">10</label>
       </div>
     </form>
     <div class="buttons">
