--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     <div id="progress"></div>
     <div id="loading">이미지 불러오는 중...</div>
     <img id="survey-image" alt="보행환경 이미지" class="survey-img" />
+
+    <p class="item-desc">
+    이 장면에서 느껴지는 <strong>교통사고 위험 수준</strong>을 평가해주세요.
+    </p>
     
     <form id="score-form">
       <div class="scale">
