--- a/index.html
+++ b/index.html
@@ -65,7 +65,20 @@
     <img id="survey-image" alt="보행환경 이미지" class="survey-img" />
 
     <p class="item-desc">
-    이 장면에서 느껴지는 <strong>교통사고 위험 수준</strong>을 평가해주세요.
+    1. 위 보행환경에서 느껴지는 <strong>보행성 수준</strong>을 평가해주세요.
+    </p>
+    
+    <form id="score-form">
+      <div class="scale">
+        <label><input type="radio" name="score" value="1">1</label>
+        <label><input type="radio" name="score" value="2">2</label>
+        <label><input type="radio" name="score" value="3">3</label>
+        <label><input type="radio" name="score" value="4">4</label>
+        <label><input type="radio" name="score" value="5">5</label>
+      </div>
+
+      <p class="item-desc">
+    2. 위 보행환경에서 느껴지는 <strong>심미성 수준</strong>을 평가해주세요.
     </p>
     
     <form id="score-form">
