--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
     
     <form id="score-form">
       <div class="scale">
-        <label><input type="radio" name="score" value="1">1</label>
-        <label><input type="radio" name="score" value="2">2</label>
-        <label><input type="radio" name="score" value="3">3</label>
-        <label><input type="radio" name="score" value="4">4</label>
-        <label><input type="radio" name="score" value="5">5</label>
+        <label><input type="radio" name="score_walkablilty" value="1">1</label>
+        <label><input type="radio" name="score_walkablilty" value="2">2</label>
+        <label><input type="radio" name="score_walkablilty" value="3">3</label>
+        <label><input type="radio" name="score_walkablilty" value="4">4</label>
+        <label><input type="radio" name="score_walkablilty" value="5">5</label>
       </div>
 
       <p class="item-desc">
@@ -83,11 +83,11 @@
     
     <form id="score-form">
       <div class="scale">
-        <label><input type="radio" name="score" value="1">1</label>
-        <label><input type="radio" name="score" value="2">2</label>
-        <label><input type="radio" name="score" value="3">3</label>
-        <label><input type="radio" name="score" value="4">4</label>
-        <label><input type="radio" name="score" value="5">5</label>
+        <label><input type="radio" name="score_aesthetic" value="1">1</label>
+        <label><input type="radio" name="score_aesthetic" value="2">2</label>
+        <label><input type="radio" name="score_aesthetic" value="3">3</label>
+        <label><input type="radio" name="score_aesthetic" value="4">4</label>
+        <label><input type="radio" name="score_aesthetic" value="5">5</label>
       </div>
     </form>
     <div class="buttons">
